# code_reviewer_v2

./: .gitignore  1.table.txt  2.loges.txt  ARCHITECTURE_BLUEPRINT.md  AUDIT_RESULTS.md  BENCHMARK_LOG.txt  Dockerfile  FINDINGS_PAPER.md  README.md  REQUIREMENTS_CHECKLIST.md  all bechamrks-terminal logs.txt  all_record.txt  append_summary_to_last.py  benchmark_comparison.md  benchmark_models.py  benchmark_results.csv  benchmark_results.json  benchmark_run_log.txt  brutal_stress.py  crypto_service.txt  deepseektest.txt  extreme_tests.py  final test-2last.txt  final-result.txt  final_checklist.md  heavy_benchmark.py  hf_api_test.txt  hugging.txt  inference.py  last-test.txt  latest-bench.md  latest-test.txt  lgos-complate.txt  live_results.txt  log23.txt  log40.txt  logs-2m.txt  logs-3.txt  logs-con-gpt.txt  logs-con.txt  (+18 more)
.github/workflows/: sync.yml
code-review-env/: Dockerfile  README.md  inference.py  openenv.yaml  requirements.txt  server.py
code-review-env/env/: __init__.py  environment.py  models.py  reward_engine.py  state_manager.py
code-review-env/env/graders/: __init__.py  base_grader.py  grader_easy.py  grader_hard.py  grader_medium.py
code-review-env/env/tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
code-review-env/tests/: conftest.py  test_advanced_cases.py  test_api.py  test_comprehensive.py  test_environment.py  test_extreme_final.py  test_graders.py  test_inference_fixes.py  test_inference_helpers.py  test_performance_quality.py  test_rewards.py  test_upgrades.py
prompts/: extreme_hard_review.txt
server/: __init__.py  app.py
